用户交互技术/1953729_吴浩泽_project/Tower Defense Project Unity5.5/Library/PackageCache/com.unity.visualscripting@1.8.0/Runtime/VisualScripting.Flow/Dependencies/NCalc/NCalcParser.cs
#pragma warning disable 219
// $ANTLR 3.2 Sep 23, 2009 12:02:23 C:\\Users\\s.ros\\Documents\\D�veloppement\\NCalc\\Grammar\\NCalc.g 2009-11-11 17:56:42

using System;
using System.Collections.Generic;
using System.Globalization;
using System.Text;
using Unity.VisualScripting.Antlr3.Runtime;
using Unity.VisualScripting.Antlr3.Runtime.Tree;

namespace Unity.VisualScripting.Dependencies.NCalc
{
    public class NCalcParser : Parser
    {
        // delegates
        // delegators

        public NCalcParser(ITokenStream input)
            : this(input, new RecognizerSharedState()) { }

        public NCalcParser(ITokenStream input, RecognizerSharedState state)
            : base(input, state)
        {
            InitializeCyclicDFAs();
        }

        protected ITreeAdaptor adaptor = new CommonTreeAdaptor();

        public ITreeAdaptor TreeAdaptor
        {
            get
            {
                return adaptor;
            }
            set
            {
                adaptor = value;
            }
        }

        override public string[] TokenNames
        {
            get
            {
                return tokenNames;
            }
        }

        override public string GrammarFileName
        {
            get
            {
                return "C:\\Users\\s.ros\\Documents\\D�veloppement\\NCalc\\Grammar\\NCalc.g";
            }
        }

        public List<string> Errors { get; private set; }

        // $ANTLR end "arguments"

        // Delegated rules

        private void InitializeCyclicDFAs() { }

        private string extractString(string text)
        {
            var sb = new StringBuilder(text);
            var startIndex = 1; // Skip initial quote
            var slashIndex = -1;

            while ((slashIndex = sb.ToString().IndexOf(BS, startIndex)) != -1)
            {
                var escapeType = sb[slashIndex + 1];
                switch (escapeType)
                {
                    case 'u':
                        var hcode = String.Concat(sb[slashIndex + 4], sb[slashIndex + 5]);
                        var lcode = String.Concat(sb[slashIndex + 2], sb[slashIndex + 3]);
                        var unicodeChar = Encoding.Unicode.GetChars(new[] { Convert.ToByte(hcode, 16), Convert.ToByte(lcode, 16) })[0];
                        sb.Remove(slashIndex, 6).Insert(slashIndex, unicodeChar);
                        break;
                    case 'n':
                        sb.Remove(slashIndex, 2).Insert(slashIndex, '\n');
                        break;
                    case 'r':
                        sb.Remove(slashIndex, 2).Insert(slashIndex, '\r');
                        break;
                    case 't':
                        sb.Remove(slashIndex, 2).Insert(slashIndex, '\t');
                        break;
                    case '\'':
                        sb.Remove(slashIndex, 2).Insert(slashIndex, '\'');
                        break;
                    case '\\':
                        sb.Remove(slashIndex, 2).Insert(slashIndex, '\\');
                        break;
                    default:
                        throw new RecognitionException("Unvalid escape sequence: \\" + escapeType);
                }

                startIndex = slashIndex + 1;
            }

            sb.Remove(0, 1);
            sb.Remove(sb.Length - 1, 1);

            return sb.ToString();
        }

        public override void DisplayRecognitionError(String[] tokenNames, RecognitionException e)
        {
            base.DisplayRecognitionError(tokenNames, e);

            if (Errors == null)
            {
                Errors = new List<string>();
            }

            var hdr = GetErrorHeader(e);
            var msg = GetErrorMessage(e, tokenNames);
            Errors.Add(msg + " at " + hdr);
        }

        // $ANTLR start "ncalcExpression"
        // C:\\Users\\s.ros\\Documents\\D�veloppement\\NCalc\\Grammar\\NCalc.g:77:1: ncalcExpression returns [LogicalExpression value] : logicalExpression EOF ;
        public ncalcExpression_return ncalcExpression() // throws RecognitionException [1]
        {
            var retval = new ncalcExpression_return();
            retval.Start = input.LT(1);

            CommonTree root_0 = null;

            IToken EOF2 = null;
            logicalExpression_return logicalExpression1 = null;

            CommonTree EOF2_tree = null;

            try
            {
                // C:\\Users\\s.ros\\Documents\\D�veloppement\\NCalc\\Grammar\\NCalc.g:78:2: ( logicalExpression EOF )
                // C:\\Users\\s.ros\\Documents\\D�veloppement\\NCalc\\Grammar\\NCalc.g:78:4: logicalExpression EOF
                {
                    root_0 = (CommonTree)adaptor.GetNilNode();

                    PushFollow(FOLLOW_logicalExpression_in_ncalcExpression56);
                    logicalExpression1 = logicalExpression();
                    state.followingStackPointer--;

                    adaptor.AddChild(root_0, logicalExpression1.Tree);
                    EOF2 = (IToken)Match(input, EOF, FOLLOW_EOF_in_ncalcExpression58);
                    retval.value = logicalExpression1 != null ? logicalExpression1.value : null;
                }

                retval.Stop = input.LT(-1);

                retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
                adaptor.SetTokenBoundaries(retval.Tree, (IToken)retval.Start, (IToken)retval.Stop);
            }
            catch (RecognitionException re)
            {
                ReportError(re);
                Recover(input, re);
                // Conversion of the second argument necessary, but harmless
                retval.Tree = (CommonTree)adaptor.ErrorNode(input, (IToken)retval.Start, input.LT(-1), re);
            }
            finally { }
            return retval;
        }

        // $ANTLR start "logicalExpression"
        // C:\\Users\\s.ros\\Documents\\D�veloppement\\NCalc\\Grammar\\NCalc.g:81:1: logicalExpression returns [LogicalExpression value] : left= conditionalExpression ( '?' middle= conditionalExpression ':' right= conditionalExpression )? ;
        public logicalExpression_return logicalExpression() // throws RecognitionException [1]
        {
            var retval = new logicalExpression_return();
            retval.Start = input.LT(1);

            CommonTree root_0 = null;

            IToken char_literal3 = null;
            IToken char_literal4 = null;
            conditionalExpression_return left = null;

            conditionalExpression_return middle = null;

            conditionalExpression_return right = null;

            CommonTree char_literal3_tree = null;
            CommonTree char_literal4_tree = null;

            try
            {
                // C:\\Users\\s.ros\\Documents\\D�veloppement\\NCalc\\Grammar\\NCalc.g:82:2: (left= conditionalExpression ( '?' middle= conditionalExpression ':' right= conditionalExpression )? )
                // C:\\Users\\s.ros\\Documents\\D�veloppement\\NCalc\\Grammar\\NCalc.g:82:4: left= conditionalExpression ( '?' middle= conditionalExpression ':' right= conditionalExpression )?
                {
                    root_0 = (CommonTree)adaptor.GetNilNode();

                    PushFollow(FOLLOW_conditionalExpression_in_logicalExpression78);
                    left = conditionalExpression();
                    state.followingStackPointer--;

                    adaptor.AddChild(root_0, left.Tree);
                    retval.value = left != null ? left.value : null;
                    // C:\\Users\\s.ros\\Documents\\D�veloppement\\NCalc\\Grammar\\NCalc.g:82:57: ( '?' middle= conditionalExpression ':' right= conditionalExpression )?
                    var alt1 = 2;
                    var LA1_0 = input.LA(1);

                    if (LA1_0 == 19)
                    {
                        alt1 = 1;
                    }
                    switch (alt1)
                    {
                        case 1:
                            // C:\\Users\\s.ros\\Documents\\D�veloppement\\NCalc\\Grammar\\NCalc.g:82:59: '?' middle= conditionalExpression ':' right= conditionalExpression
                            {
                                char_literal3 = (IToken)Match(input, 19, FOLLOW_19_in_logicalExpression84);
                                char_literal3_tree = (CommonTree)adaptor.Create(char_literal3);
                                adaptor.AddChild(root_0, char_literal3_tree);

                                PushFollow(FOLLOW_conditionalExpression_in_logicalExpression88);
                                middle = conditionalExpression();
                                state.followingStackPointer--;

                                adaptor.AddChild(root_0, middle.Tree);
                                char_literal4 = (IToken)Match(input, 20, FOLLOW_20_in_logicalExpression90);
                                char_literal4_tree = (CommonTree)adaptor.Create(char_literal4);
                                adaptor.AddChild(root_0, char_literal4_tree);

                                PushFollow(FOLLOW_conditionalExpression_in_logicalExpression94);
                                right = conditionalExpression();
                                state.followingStackPointer--;

                                adaptor.AddChild(root_0, right.Tree);
                                retval.value = new TernaryExpression(left != null ? left.value : null, middle != null ? middle.value : null, right != null ? right.value : null);
                            }
                            break;
                    }
                }

                retval.Stop = input.LT(-1);

                retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
                adaptor.SetTokenBoundaries(retval.Tree, (IToken)retval.Start, (IToken)retval.Stop);
            }
            catch (RecognitionException re)
            {
                ReportError(re);
                Recover(input, re);
                // Conversion of the second argument necessary, but harmless
                retval.Tree = (CommonTree)adaptor.ErrorNode(input, (IToken)retval.Start, input.LT(-1), re);
            }
            finally { }
            return retval;
        }

        // $ANTLR start "conditionalExpression"
        // C:\\Users\\s.ros\\Documents\\D�veloppement\\NCalc\\Grammar\\NCalc.g:85:1: conditionalExpression returns [LogicalExpression value] : left= booleanAndExpression ( ( '||' | 'or' ) right= conditionalExpression )* ;
        public conditionalExpression_return conditionalExpression() // throws RecognitionException [1]
        {
            var retval = new conditionalExpression_return();
            retval.Start = input.LT(1);

            CommonTree root_0 = null;

            IToken set5 = null;
            booleanAndExpression_return left = null;

            conditionalExpression_return right = null;

            CommonTree set5_tree = null;

            var type = BinaryExpressionType.Unknown;

            try
            {
                // C:\\Users\\s.ros\\Documents\\D�veloppement\\NCalc\\Grammar\\NCalc.g:89:2: (left= booleanAndExpression ( ( '||' | 'or' ) right= conditionalExpression )* )
                // C:\\Users\\s.ros\\Documents\\D�veloppement\\NCalc\\Grammar\\NCalc.g:89:4: left= booleanAndExpression ( ( '||' | 'or' ) right= conditionalExpression )*
                {
                    root_0 = (CommonTree)adaptor.GetNilNode();

                    PushFollow(FOLLOW_booleanAndExpression_in_conditionalExpression121);
                    left = booleanAndExpression();
                    state.followingStackPointer--;

                    adaptor.AddChild(root_0, left.Tree);
                    retval.value = left != null ? left.value : null;
                    // C:\\Users\\s.ros\\Documents\\D�veloppement\\NCalc\\Grammar\\NCalc.g:89:56: ( ( '||' | 'or' ) right= conditionalExpression )*
                    do
                    {
                        var alt2 = 2;
                        var LA2_0 = input.LA(1);

                        if (LA2_0 >= 21 && LA2_0 <= 22)
                        {
                            alt2 = 1;
                        }

                        switch (alt2)
                        {
                            case 1:
                                // C:\\Users\\s.ros\\Documents\\D�veloppement\\NCalc\\Grammar\\NCalc.g:90:4: ( '||' | 'or' ) right= conditionalExpression
                                {
                                    set5 = (IToken)input.LT(1);
                                    if (input.LA(1) >= 21 && input.LA(1) <= 22)
                                    {
                                        input.Consume();
                                        adaptor.AddChild(root_0, (CommonTree)adaptor.Create(set5));
                                        state.errorRecovery = false;
                                    }
                                    else
                                    {
                                        var mse = new MismatchedSetException(null, input);
                                        throw mse;
                                    }

                                    type = BinaryExpressionType.Or;
                                    PushFollow(FOLLOW_conditionalExpression_in_conditionalExpression146);
                                    right = conditionalExpression();
                                    state.followingStackPointer--;

                                    adaptor.AddChild(root_0, right.Tree);
                                    retval.value = new BinaryExpression(type, retval.value, right != null ? right.value : null);
                                }
                                break;

                            default:
                                goto loop2;
                        }
                    }
                    while (true);

                loop2:
                    ; // Stops C# compiler whining that label 'loop2' has no statements
                }

                retval.Stop = input.LT(-1);

                retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
                adaptor.SetTokenBoundaries(retval.Tree, (IToken)retval.Start, (IToken)retval.Stop);
            }
            catch (RecognitionException re)
            {
                ReportError(re);
                Recover(input, re);
                // Conversion of the second argument necessary, but harmless
                retval.Tree = (CommonTree)adaptor.ErrorNode(input, (IToken)retval.Start, input.LT(-1), re);
            }
            finally { }
            return retval;
        }

        // $ANTLR start "booleanAndExpression"
        // C:\\Users\\s.ros\\Documents\\D�veloppement\\NCalc\\Grammar\\NCalc.g:95:1: booleanAndExpression returns [LogicalExpression value] : left= bitwiseOrExpression ( ( '&&' | 'and' ) right= bitwiseOrExpression )* ;
        public booleanAndExpression_return booleanAndExpression() // throws RecognitionException [1]
        {
            var retval = new booleanAndExpression_return();
            retval.Start = input.LT(1);

            CommonTree root_0 = null;

            IToken set6 = null;
            bitwiseOrExpression_return left = null;

            bitwiseOrExpression_return right = null;

            CommonTree set6_tree = null;

            var type = BinaryExpressionType.Unknown;

            try
            {
                // C:\\Users\\s.ros\\Documents\\D�veloppement\\NCalc\\Grammar\\NCalc.g:99:2: (left= bitwiseOrExpression ( ( '&&' | 'and' ) right= bitwiseOrExpression )* )
                // C:\\Users\\s.ros\\Documents\\D�veloppement\\NCalc\\Grammar\\NCalc.g:99:4: left= bitwiseOrExpression ( ( '&&' | 'and' ) right= bitwiseOrExpression )*
                {
                    root_0 = (CommonTree)adaptor.GetNilNode();

                    PushFollow(FOLLOW_bitwiseOrExpression_in_booleanAndExpression180);
                    left = bitwiseOrExpression();
                    state.followingStackPointer--;

                    adaptor.AddChild(root_0, left.Tree);
                    retval.value = left != null ? left.value : null;
                    // C:\\Users\\s.ros\\Documents\\D�veloppement\\NCalc\\Grammar\\NCalc.g:99:55: ( ( '&&' | 'and' ) right= bitwiseOrExpression )*
                    do
                    {
                        var alt3 = 2;
                        var LA3_0 = input.LA(1);

                        if (LA3_0 >= 23 && LA3_0 <= 24)
                        {
                            alt3 = 1;
                        }

                        switch (alt3)
                        {
                            case 1:
                                // C:\\Users\\s.ros\\Documents\\D�veloppement\\NCalc\\Grammar\\NCalc.g:100:4: ( '&&' | 'and' ) right= bitwiseOrExpression
                                {
                                    set6 = (IToken)input.LT(1);
                                    if (input.LA(1) >= 23 && input.LA(1) <= 24)
                                    {
                                        input.Consume();
                                        adaptor.AddChild(root_0, (CommonTree)adaptor.Create(set6));
                                        state.errorRecovery = false;
                                    }
                                    else
                                    {
                                        var mse = new MismatchedSetException(null, input);
                                        throw mse;
                                    }

                                    type = BinaryExpressionType.And;
                                    PushFollow(FOLLOW_bitwiseOrExpression_in_booleanAndExpression205);
                                    right = bitwiseOrExpression();
                                    state.followingStackPointer--;

                                    adaptor.AddChild(root_0, right.Tree);
                                    retval.value = new BinaryExpression(type, retval.value, right != null ? right.value : null);
                                }
                                break;

                            default:
                                goto loop3;
                        }
                    }
                    while (true);

                loop3:
                    ; // Stops C# compiler whining that label 'loop3' has no statements
                }

                retval.Stop = input.LT(-1);

                retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
                adaptor.SetTokenBoundaries(retval.Tree, (IToken)retval.Start, (IToken)retval.Stop);
            }
            catch (RecognitionException re)
            {
                ReportError(re);
                Recover(input, re);
                // Conversion of the second argument necessary, but harmless
                retval.Tree = (CommonTree)adaptor.ErrorNode(input, (IToken)retval.Start, input.LT(-1), re);
            }
            finally { }
            return retval;
        }

        // $ANTLR start "bitwiseOrExpression"
        // C:\\Users\\s.ros\\Documents\\D�veloppement\\NCalc\\Grammar\\NCalc.g:105:1: bitwiseOrExpression returns [LogicalExpression value] : left= bitwiseXOrExpression ( '|' right= bitwiseOrExpression )* ;
        public bitwiseOrExpression_return bitwiseOrExpression() // throws RecognitionException [1]
        {
            var retval = new bitwiseOrExpression_return();
            retval.Start = input.LT(1);

            CommonTree root_0 = null;

            IToken char_literal7 = null;
            bitwiseXOrExpression_return left = null;

            bitwiseOrExpression_return right = null;

            CommonTree char_literal7_tree = null;

            var type = BinaryExpressionType.Unknown;

            try
            {
                // C:\\Users\\s.ros\\Documents\\D�veloppement\\NCalc\\Grammar\\NCalc.g:109:2: (left= bitwiseXOrExpression ( '|' right= bitwiseOrExpression )* )
                // C:\\Users\\s.ros\\Documents\\D�veloppement\\NCalc\\Grammar\\NCalc.g:109:4: left= bitwiseXOrExpression ( '|' right= bitwiseOrExpression )*
                {
                    root_0 = (CommonTree)adaptor.GetNilNode();

                    PushFollow(FOLLOW_bitwiseXOrExpression_in_bitwiseOrExpression237);
                    left = bitwiseXOrExpression();
                    state.followingStackPointer--;

                    adaptor.AddChild(root_0, left.Tree);
                    retval.value = left != null ? left.value : null;
                    // C:\\Users\\s.ros\\Documents\\D�veloppement\\NCalc\\Grammar\\NCalc.g:109:56: ( '|' right= bitwiseOrExpression )*
                    do
                    {
                        var alt4 = 2;
                        var LA4_0 = input.LA(1);

                        if (LA4_0 == 25)
                        {
                            alt4 = 1;
                        }

                        switch (alt4)
                        {
                            case 1:
                                // C:\\Users\\s.ros\\Documents\\D�veloppement\\NCalc\\Grammar\\NCalc.g:110:4: '|' right= bitwiseOrExpression
                                {
                                    char_literal7 = (IToken)Match(input, 25, FOLLOW_25_in_bitwiseOrExpression246);
                                    char_literal7_tree = (CommonTree)adaptor.Create(char_literal7);
                                    adaptor.AddChild(root_0, char_literal7_tree);

                                    type = BinaryExpressionType.BitwiseOr;
                                    PushFollow(FOLLOW_bitwiseOrExpression_in_bitwiseOrExpression256);
                                    right = bitwiseOrExpression();
                                    state.followingStackPointer--;

                                    adaptor.AddChild(root_0, right.Tree);
                                    retval.value = new BinaryExpression(type, retval.value, right != null ? right.value : null);
                                }
                                break;

                            default:
                                goto loop4;
                        }
                    }
                    while (true);

                loop4:
                    ; // Stops C# compiler whining that label 'loop4' has no statements
                }

                retval.Stop = input.LT(-1);

                retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
                adaptor.SetTokenBoundaries(retval.Tree, (IToken)retval.Start, (IToken)retval.Stop);
            }
            catch (RecognitionException re)
            {
                ReportError(re);
                Recover(input, re);
                // Conversion of the second argument necessary, but harmless
                retval.Tree = (CommonTree)adaptor.ErrorNode(input, (IToken)retval.Start, input.LT(-1), re);
            }
            finally { }
            return retval;
        }

        // $ANTLR start "bitwiseXOrExpression"
        // C:\\Users\\s.ros\\Documents\\D�veloppement\\NCalc\\Grammar\\NCalc.g:115:1: bitwiseXOrExpression returns [LogicalExpression value] : left= bitwiseAndExpression ( '^' right= bitwiseAndExpression )* ;
        public bitwiseXOrExpression_return bitwiseXOrExpression() // throws RecognitionException [1]
        {
            var retval = new bitwiseXOrExpression_return();
            retval.Start = input.LT(1);

            CommonTree root_0 = null;

            IToken char_literal8 = null;
            bitwiseAndExpression_return left = null;

            bitwiseAndExpression_return right = null;

            CommonTree char_literal8_tree = null;

            var type = BinaryExpressionType.Unknown;

            try
            {
                // C:\\Users\\s.ros\\Documents\\D�veloppement\\NCalc\\Grammar\\NCalc.g:119:2: (left= bitwiseAndExpression ( '^' right= bitwiseAndExpression )* )
                // C:\\Users\\s.ros\\Documents\\D�veloppement\\NCalc\\Grammar\\NCalc.g:119:4: left= bitwiseAndExpression ( '^' right= bitwiseAndExpression )*
                {
                    root_0 = (CommonTree)adaptor.GetNilNode();

                    PushFollow(FOLLOW_bitwiseAndExpression_in_bitwiseXOrExpression290);
                    left = bitwiseAndExpression();
                    state.followingStackPointer--;

                    adaptor.AddChild(root_0, left.Tree);
                    retval.value = left != null ? left.value : null;
                    // C:\\Users\\s.ros\\Documents\\D�veloppement\\NCalc\\Grammar\\NCalc.g:119:56: ( '^' right= bitwiseAndExpression )*
                    do
                    {
                        var alt5 = 2;
                        var LA5_0 = input.LA(1);

                        if (LA5_0 == 26)
                        {
                            alt5 = 1;
                        }

                        switch (alt5)
                        {
                            case 1:
                                // C:\\Users\\s.ros\\Documents\\D�veloppement\\NCalc\\Grammar\\NCalc.g:120:4: '^' right= bitwiseAndExpression
                                {
                                    char_literal8 = (IToken)Match(input, 26, FOLLOW_26_in_bitwiseXOrExpression299);
                                    char_literal8_tree = (CommonTree)adaptor.Create(char_literal8);
                                    adaptor.AddChild(root_0, char_literal8_tree);

                                    type = BinaryExpressionType.BitwiseXOr;
                                    PushFollow(FOLLOW_bitwiseAndExpression_in_bitwiseXOrExpression309);
                                    right = bitwiseAndExpression();
                                    state.followingStackPointer--;

                                    adaptor.AddChild(root_0, right.Tree);
                                    retval.value = new BinaryExpression(type, retval.value, right != null ? right.value : null);
                                }
                                break;

                            default:
                                goto loop5;
                        }
                    }
                    while (true);

                loop5:
                    ; // Stops C# compiler whining that label 'loop5' has no statements
                }

                retval.Stop = input.LT(-1);

                retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
                adaptor.SetTokenBoundaries(retval.Tree, (IToken)retval.Start, (IToken)retval.Stop);
            }
            catch (RecognitionException re)
            {
                ReportError(re);
                Recover(input, re);
                // Conversion of the second argument necessary, but harmless
                retval.Tree = (CommonTree)adaptor.ErrorNode(input, (IToken)retval.Start, input.LT(-1), re);
            }
            finally { }
            return retval;
        }

        // $ANTLR start "bitwiseAndExpression"
        // C:\\Users\\s.ros\\Documents\\D�veloppement\\NCalc\\Grammar\\NCalc.g:125:1: bitwiseAndExpression returns [LogicalExpression value] : left= equalityExpression ( '&' right= equalityExpression )* ;
        public bitwiseAndExpression_return bitwiseAndExpression() // throws RecognitionException [1]
        {
            var retval = new bitwiseAndExpression_return();
            retval.Start = input.LT(1);

            CommonTree root_0 = null;

            IToken char_literal9 = null;
            equalityExpression_return left = null;

            equalityExpression_return right = null;

            CommonTree char_literal9_tree = null;

            var type = BinaryExpressionType.Unknown;

            try
            {
                // C:\\Users\\s.ros\\Documents\\D�veloppement\\NCalc\\Grammar\\NCalc.g:129:2: (left= equalityExpression ( '&' right= equalityExpression )* )
                // C:\\Users\\s.ros\\Documents\\D�veloppement\\NCalc\\Grammar\\NCalc.g:129:4: left= equalityExpression ( '&' right= equalityExpression )*
                {
                    root_0 = (CommonTree)adaptor.GetNilNode();
